--- a/chemodan__shop/css/style.css
+++ b/chemodan__shop/css/style.css
@@ -721,7 +721,7 @@ h3 {
   background: #fff;
   max-width: 1170px;
   flex-wrap: wrap;
-  background: #f2f2f2;
+  /*background: #f2f2f2;*/
 }
 
 .sidebar {
