--- a/chemodan__shop/scss/layout/_header.scss
+++ b/chemodan__shop/scss/layout/_header.scss
@@ -138,6 +138,7 @@ header{
 		display: flex;
 		justify-content: flex-start;
 		align-items: center;
+		cursor: pointer;
 		&_1{
 			img{
 				width: 23px;
