--- a/chemodan__shop/scss/layout/_content.scss
+++ b/chemodan__shop/scss/layout/_content.scss
@@ -106,6 +106,11 @@ h3{
 .slick-next{
 	right: 4px;
 }
+.tab{
+	&_1,&_2,&_3{
+		cursor: pointer;
+	}
+}
 .content{	
 	order: 2;
     -webkit-order: 2;
@@ -638,6 +643,8 @@ h3{
 	a{
 		font: 400 14px "Roboto",sans-serif;
 		color: #a4a4a4;
+		padding: 0 6px;
+		transition: 0s;
 		img{
 			width: 24px;
 		}
@@ -2635,6 +2642,11 @@ h3{
 		i{
 			font-size: 14px;
 			color: #1c1c1c;
+			cursor: pointer;
+			height: 24px;
+    		display: flex;
+    		justify-content: center;
+    		align-items: center;
 			&:hover{
 				color: #3498db;
 			}
