--- a/rattler/scss/layout/_content.scss
+++ b/rattler/scss/layout/_content.scss
@@ -74,7 +74,7 @@ h3{
 }
 .hamb{
 	padding: 20px;
-    position: fixed;
+    position: absolute;
     z-index: 9999;
     left: 0;
     top: 0;
@@ -427,7 +427,7 @@ h3{
 			&:last-child{
 				margin-bottom: 0;
 			}
-			&:placeholder{
+			&::placeholder{
 				font: 400 14px 'PT Sans', sans-serif;
 				color: #333333;
 				line-height: 18px;
@@ -450,7 +450,7 @@ h3{
 			color: #333333;
 			line-height: 18px;
 			padding: 15px;
-			&:placeholder{
+			&::placeholder{
 				font: 400 14px 'PT Sans', sans-serif;
 				color: #333333;
 				line-height: 18px;
@@ -618,15 +618,185 @@ h3{
 		}
 	}
 }
+/*Modal*/
+.modal-form{
+	display: none;
+	width: 360px;
+	height: 400px;
+	position: fixed;
+	top: 0%;
+	left: 50%;
+	background: #ffffff;
+	z-index: 5;
+	border-radius: 3px;
+	/*overflow: hidden;*/
+	.modal-close{
+		cursor: pointer;
+		position: absolute;
+ 		right: -21px;  		
+ 		top: 0px;
+ 		width: 21px;
+ 		height: 21px;
+ 		border-radius: 4px;
+ 		background-color: #354961;
+ 		background-image: url(../img/close.png);
+ 		background-repeat: no-repeat;
+ 		background-position: center center;
+	}
+}
+.overlay{
+	display: none;
+	background: #000000;
+	position: fixed;
+	top: 0;
+	left: 0;
+  	width: 100%;
+  	height: 100%;
+  	opacity: 0.4;
+  	-moz-opacity:0.4; 
+  	filter:alpha(opacity=40);
+	z-index: 3;
+	overflow: hidden;
+}
 
+.modal-run{
+    display: block;
+}
 
+.modal{
+	&__main{
+		padding: 20px 30px;
+		background: url(../img/modal.png) center top no-repeat;
+		background-size: cover;
+		border-top-right-radius: 3px;
+		border-top-left-radius: 3px;
+	}
+	&__title{
+		font: 700 30px 'PT Sans', sans-serif;
+    	color: #fff;
+    	text-align: center;
+    	margin-bottom: 15px;
+    	text-transform: uppercase;
+	}
+	&__form{
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+	&__input, &__textarea{
+		width: 100%;
+		input, textarea{
+			height: 40px;
+		    width: 100%;
+		    border-radius: 3px;
+		    border: 0;
+		    background: #fff;
+		    font: 400 14px 'PT Sans', sans-serif;
+		    color: #333333;
+		    line-height: 18px;
+		    padding: 0 15px;
+		    margin-bottom: 10px;
+		    &::placeholder{
+				font: 400 14px 'PT Sans', sans-serif;
+				color: #333333;
+				line-height: 18px;
+			}
+		}
+	}
+	&__textarea{
+		textarea{
+			height: 130px;
+			padding: 15px;
+			&::placeholder{
+				font: 400 14px 'PT Sans', sans-serif;
+				color: #333333;
+				line-height: 18px;
+			}
+		}
+	}
+	&__bottom{
+		border-bottom-right-radius: 3px;
+		border-bottom-left-radius: 3px;
+		flex-direction: column;
+		align-items: flex-start;
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	&__text{
+		&:first-child{
+			margin-bottom: 5px;
+		}
+		&:last-child{
+			padding-left: 23px;
+		}
+	}
+	&-thx{
+		height: 130px;
+	}
+	&__p{
+		font: 400 13px 'PT Sans', sans-serif;
+		color: #fff;
+		line-height: 18px;
+	}
+}
+  /*Modal end*/
+.select2{
+	width: 100%;
+    height: 40px;
+	border-radius: 2px;
+    list-style: none;
+    cursor: pointer;
+    display: flex;
+    display: inline-block;
+    background: #fff;
+    vertical-align: top;
+    position: relative;
+    z-index: 5;
+    margin-bottom: 15px;
+	&__item{
+		display: none;
+		z-index: 6;
+		padding: 0 15px;
+		border: 0;
+		border-top: 0;
+		height: 40px;
+		background: #fff;
+		color: #333333;
+		font: 400 14px 'PT Sans', sans-serif;
+		line-height: 40px;
+		&:not(.select__item_init){
+			float: left; 
+			width: 100%; 
+			/*margin-left: -1px;*/
+			display: none; 
+		}
+		&_init{
+			padding: 0 15px;
+			background: none;
+			font: 400 14px 'PT Sans', sans-serif;
+		    color: #333333;
+			border-radius: 2px;
+			z-index: 5;
+    		position: relative;
+    		line-height: 40px;
+    		height: 40px;
+		}
+		&_active{
+			display: block;
+			order: 2;
+		}
+		&_show{
+			display: block;
+		}
+	}
+}
 
 
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
     body{min-height: 100hv; width: 100%; display: flex; flex-direction: column;}
 }
-@media screen and (max-width: 1620px) {
+@media screen and (max-width: 1200px) {
 	.sidebar{
 		left: -250px !important;
 		transition: 0.3s ease-in-out;
@@ -646,7 +816,11 @@ h3{
 	
 }
 
-@media screen and (min-width: 992px) and (max-width: 1200px) {
+@media screen and (min-width: 992px) and (max-width: 1619px) {
+	.wrapper{
+		max-width: 1150px;
+		padding-left: 250px;
+	}
 	.title{
 		font-size: 27px;
 	}
