--- a/rattler/scss/layout/_content.scss
+++ b/rattler/scss/layout/_content.scss
@@ -72,6 +72,9 @@ h3{
     /*display: flex;
     justify-content: center;*/
 }
+.fixed{
+	overflow: hidden;
+}
 .hamb{
 	padding: 20px;
     position: fixed;
