--- a/rattler/scss/layout/_content.scss
+++ b/rattler/scss/layout/_content.scss
@@ -257,6 +257,7 @@ h3{
 }
 .banner{
 	margin-bottom: 40px;
+	pointer-events: none;
 	&__slide{
 		background: url(../img/banner.jpg) center top no-repeat;
 		background-size: cover;
