--- a/rattler/scss/layout/_content.scss
+++ b/rattler/scss/layout/_content.scss
@@ -236,6 +236,9 @@ h3{
 		width: 170px;
 	}
 }
+.slick-slider{
+	touch-action: none !important;
+}
 .slick-prev, .slick-next{
 	position: absolute;
 	top: 47%;
@@ -257,7 +260,6 @@ h3{
 }
 .banner{
 	margin-bottom: 40px;
-	pointer-events: none;
 	&__slide{
 		background: url(../img/banner.jpg) center top no-repeat;
 		background-size: cover;
@@ -822,7 +824,7 @@ h3{
 	.hamb{
 		display: inline-block;
 		&__toggle{
-			left: 235px;
+			left: 80%;
 		}
 	}
 }
